[package]
name = "iframe-traffic-counter"
authors = ["Madeline Sparkles (madeline@mouse.lgbt)"]
description = "An iframe-based website traffic counter / server"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/msparkles/iframe-traffic-counter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

env_logger = "0.11.2"
log = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"